--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,29 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  text-align: center;
+  margin: 10px;
+  display: flex;
+  /* width: 100%; */
+  height: 100%;
+}
+
+.form{
+  /* float: left;  */
+  width: 50%
+}
+
+.resume{
+  border: black 1px solid;
+  /* float: right;  */
+  width: 50%
 }
