--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Calibri', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -23,13 +23,113 @@ code {
 
 .form{
   /* float: left;  */
-  width: 50%;
+  width: 55%;
   height: 100;
 }
 
 .resume{
   border: black 1px solid;
   /* float: right;  */
-  width: 50%;
+  width: 45%;
   height: 730px;
+}
+
+.header{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.fullName{
+  float: left;
+}
+
+.personalDetails{
+  float: right;
+}
+
+.firstLine{
+  border-bottom: black 2px solid;
+  margin-bottom: 0;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.resumeDetails{
+  display: flex;
+  flex-direction: column;
+}
+
+.educationHeader{
+  margin-left: 20px;
+  margin-top: 0;
+}
+
+h2{
+  text-align: left;
+}
+
+.schoolName{
+  float: left;
+  display: flex;
+  justify-content: left;
+  vertical-align: text-bottom;
+  margin-left: 20px;
+  flex-direction: column;
+}
+
+#schoolName{
+  /* float: left; */
+  display: inline;
+  vertical-align: top;
+}
+
+#schoolLocation{
+  /* float: left; */
+  display: inline;
+  vertical-align: top;
+}
+
+.graduation{
+  float: right;
+  margin-right: 20px;
+}
+
+.workExpHeader{
+  margin-left: 20px;
+  margin-top: 0;
+}
+
+.expLeft{
+  float:left;
+}
+
+#responsibilities{
+  float: right;
+}
+
+.exps{
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.projectsHeader{
+  margin-left: 20px;
+  margin-top: 0;
+}
+
+.projects{
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.projectLeft{
+  float: left;
+}
+
+#description{
+  float:right;
 }
