--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;800&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Calibri', 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,7 +17,7 @@ code {
 
 .App {
   text-align: center;
-  margin: 10px;
+  /*margin: 10px;*/
   display: flex;
   /* width: 100%; */
   height: 100%;
@@ -23,35 +25,57 @@ code {
 
 .form{
   /* float: left;  */
-  width: 55%;
-  height: 100;
+  width: 100%;
+  height: 100%;
+  font-family: 'Poppins';
+  padding-right: 80px;
+  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.3);
+  z-index: 1;
+  /*background-color: #CCD1E4;*/
 }
 
 .resume{
-  border: lightgrey 1px groove;
+  /*border: lightgrey 1px groove; */
   /* float: right;  */
-  background-color: lightgray;
+  background-color: #F6F4F2;
   /* width: 45%; */
   /* width needs to be at 100% for it to take up the entire width of the page when donloading */
   width: 100%;
-  height: 1230px;
+  height: 100%;
+  padding: 20px;
+  margin-right: 0px;
+  font-family: 'Poppins';
+  color: #424242;
 }
 
 .header{
   margin-left: 20px;
   margin-right: 20px;
+  display: inline;
 }
 
 .fullName{
   float: left;
+  font-size: 18px;
 }
+
 
 .personalDetails{
   float: right;
+  font-size: 12px;
+  line-height: 12px;
+  padding: 0;
+  margin: 0;
+  text-align: right;
+}
+
+.dropdown{
+  width: 73%;
+  margin-right: 135px;
 }
 
 .firstLine{
-  border-bottom: black 2px solid;
+  border-bottom: black .5px solid;
   margin-bottom: 0;
   margin-left: 20px;
   margin-right: 20px;
@@ -60,6 +84,7 @@ code {
 .resumeDetails{
   display: flex;
   flex-direction: column;
+  font-size: 12px;
 }
 
 .educationHeader{
@@ -67,18 +92,43 @@ code {
   margin-top: 0;
 }
 
+
 h2{
   text-align: left;
+  font-size: 20px;
+}
+
+/* Styling for the Email, Phone number, Location, and Portifolio elements */
+h3{
+  font-weight: 500;
+}
+
+h3:nth-child(4){
+  margin-top: 24px;
+  text-decoration: underline;
+  color: skyblue;
+}
+
+h4{
+  font-weight: 500;
+}
+
+.education{
+  display: flex;
+  flex-direction: inherit;
 }
 
 .schoolName{
+  position: relative;
   float: left;
-  display: flex;
-  justify-content: left;
-  vertical-align: text-bottom;
+  display: inline;
   margin-left: 20px;
-  flex-direction: column;
+  flex-direction: left;
+  text-align: left;
+  line-height: 8px;
+  font-size: 14px;
 }
+
 
 #schoolName{
   /* float: left; */
@@ -90,24 +140,44 @@ h2{
   /* float: left; */
   display: inline;
   vertical-align: top;
+
 }
 
 .graduation{
-  float: right;
+  display: inline-block;
   margin-right: 20px;
+  float: right;
+  font-size: 13px;
+
 }
+
 
 .workExpHeader{
   margin-left: 20px;
   margin-top: 0;
+  font-size: 14px;
+  margin-bottom: -20px;
+  
 }
 
 .expLeft{
-  float:left;
+  position: relative;
+  float: left;
+  margin-top: 20px;
+  margin-right: 20px;
+  font-size: 13px;
+  line-height: 32px;
+  text-align: left;
+  display: block;
 }
 
+
 #responsibilities{
-  float: right;
+  clear: right;
+  margin-top: 20px;
+  padding-left: 20px;
+  text-align: left;
+  font-size: 13px;
 }
 
 .exps{
@@ -115,6 +185,7 @@ h2{
   flex-direction: column;
   margin-left: 20px;
   margin-right: 20px;
+
 }
 
 .projectsHeader{
@@ -124,16 +195,17 @@ h2{
 
 .projects{
   display: flex;
-  flex-direction: column;
+  flex-direction: row-reverse;
   margin-left: 20px;
   margin-right: 20px;
+  text-align: left;
+
 }
 
-.projectLeft{
-  float: left;
-}
 
 #description{
   float:right;
+  font-size: 13px;
 }
+
 
