--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;800&display=swap");
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Calibri', 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Calibri", "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -23,44 +23,45 @@ code {
   height: 100%;
 }
 
-.form{
+.form {
   /* float: left;  */
   width: 100%;
-  height: 100%;
-  font-family: 'Poppins';
+  min-height: 100%;
+  overflow: hidden;
+  font-family: "Poppins";
   padding-right: 80px;
-  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.3);
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.3);
   z-index: 1;
-  /*background-color: #CCD1E4;*/
+  background-color: #f6f4f2;
 }
 
-.resume{
+.resume {
   /*border: lightgrey 1px groove; */
   /* float: right;  */
-  background-color: #F6F4F2;
+  background-color: white;
   /* width: 45%; */
   /* width needs to be at 100% for it to take up the entire width of the page when donloading */
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  overflow: hidden;
   padding: 20px;
   margin-right: 0px;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   color: #424242;
 }
 
-.header{
+.header {
   margin-left: 20px;
-  margin-right: 20px;
+  margin-right: 50px;
   display: inline;
 }
 
-.fullName{
+.fullName {
   float: left;
   font-size: 18px;
 }
 
-
-.personalDetails{
+.personalDetails {
   float: right;
   font-size: 12px;
   line-height: 12px;
@@ -69,110 +70,117 @@ code {
   text-align: right;
 }
 
-.dropdown{
+.dropdown {
   width: 73%;
   margin-right: 135px;
 }
 
-.firstLine{
-  border-bottom: black .5px solid;
+.firstLine {
+  border-bottom: black 0.5px solid;
   margin-bottom: 0;
   margin-left: 20px;
-  margin-right: 20px;
+  margin-right: 50px;
 }
 
-.resumeDetails{
+.resumeDetails {
   display: flex;
   flex-direction: column;
   font-size: 12px;
 }
 
-.educationHeader{
+.educationHeader {
   margin-left: 20px;
   margin-top: 0;
 }
 
-
-h2{
+h2 {
   text-align: left;
   font-size: 20px;
 }
 
 /* Styling for the Email, Phone number, Location, and Portifolio elements */
-h3{
+h3 {
   font-weight: 500;
 }
 
-h3:nth-child(4){
+h3:nth-child(4) {
   margin-top: 24px;
   text-decoration: underline;
   color: skyblue;
 }
 
-h4{
+h4 {
   font-weight: 500;
 }
 
-.education{
+.education {
   display: flex;
   flex-direction: inherit;
 }
 
-.schoolName{
+.schoolName {
   position: relative;
-  float: left;
   display: inline;
   margin-left: 20px;
   flex-direction: left;
   text-align: left;
   line-height: 8px;
+}
+
+#scoolName {
+  margin-bottom: 5px;
+  margin-left: 20px;
+  float: left;
   font-size: 14px;
 }
 
-
-#schoolName{
-  /* float: left; */
-  display: inline;
-  vertical-align: top;
-}
-
-#schoolLocation{
-  /* float: left; */
-  display: inline;
-  vertical-align: top;
-
-}
-
-.graduation{
-  display: inline-block;
-  margin-right: 20px;
+#schoolLocation {
+  margin-left: 20px;
   float: right;
+  margin-right: 50px;
   font-size: 13px;
-
 }
 
+#graduation {
+  margin-left: 20px;
+  float: right;
+  margin-right: 50px;
+  font-size: 13px;
+}
 
-.workExpHeader{
+#degree {
+  margin-bottom: 20px;
+  margin-left: 20px;
+  float: left;
+  font-size: 13px;
+}
+
+#major {
+  margin-top: 20px;
+  margin-left: -117px;
+  float: left;
+  font-size: 13px;
+}
+
+.workExpHeader {
   margin-left: 20px;
   margin-top: 0;
   font-size: 14px;
   margin-bottom: -20px;
-  
 }
 
-.expLeft{
+.expLeft {
   position: relative;
   float: left;
   margin-top: 20px;
-  margin-right: 20px;
+  margin-right: 50px;
   font-size: 13px;
   line-height: 32px;
   text-align: left;
   display: block;
 }
 
-
-#responsibilities{
+#responsibilities {
   clear: right;
   margin-top: 20px;
   padding-left: 20px;
@@ -180,32 +188,48 @@ h4{
   font-size: 13px;
 }
 
-.exps{
+.exps {
   display: flex;
   flex-direction: column;
   margin-left: 20px;
-  margin-right: 20px;
-
+  margin-right: 50px;
 }
 
-.projectsHeader{
+.projectsHeader {
   margin-left: 20px;
   margin-top: 0;
 }
 
-.projects{
+.projects {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column;
   margin-left: 20px;
-  margin-right: 20px;
-  text-align: left;
-
+  margin-right: 50px;
 }
 
-
-#description{
-  float:right;
+#description {
+  clear: right;
+  margin-top: 20px;
+  padding-left: 20px;
+  text-align: left;
   font-size: 13px;
 }
 
+.relcourse {
+  text-align: center;
+}
 
+#title {
+  font-size: 13px;
+  line-height: 32px;
+  float: left;
+}
+
+#link {
+  text-decoration: underline;
+  color: skyblue;
+  line-height: 32px;
+  margin-right: 20px;
+  font-size: 13px;
+  float: right;
+}
