--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,8 @@ code {
   /*margin: 10px;*/
   display: flex;
   /* width: 100%; */
-  height: 100%;
+  min-height: 100%;
+  overflow: hidden;
 }
 
 .form {
@@ -158,7 +159,7 @@ h4 {
 
 #major {
   margin-top: 20px;
-  margin-left: -122px;
+  margin-left: -117px;
   float: left;
   font-size: 13px;
 }
@@ -218,6 +219,7 @@ h4 {
 
 .relcourse {
   text-align: center;
+  margin-right: 40px;
 }
 
 #title {
@@ -233,4 +235,9 @@ h4 {
   margin-right: 20px;
   font-size: 13px;
   float: right;
+}
+
+#workplace {
+  font-weight: bold;
+  font: 15px;
 }
